Mission 12 Blinking incoming traders, performance fix for surfaces